[metadata]
name = cc410
version = 0.1.1
author = Russell Feldhausen
author_email = russfeld@ksu.edu
description = CC 410 Class Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/K-State-Computational-Core/restaurantregister-python
project_urls =
    Bug Tracker = https://github.com/K-State-Computational-Core/restaurantregister-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6